--- a/roles/deploy_osh/templates/cloud.yaml.j2
+++ b/roles/deploy_osh/templates/cloud.yaml.j2
@@ -9,5 +9,5 @@ clouds:
       project_domain_name: {{ep.project_domain_name}}
       user_domain_name: {{ep.user_domain_name}}
 {% endwith %}
-      password: {{identity_admin}}
+      password: {{identity_admin_pwd}}
       auth_url: 'http://keystone.openstack.svc.{{global_domain_suffix}}/v3'
