--- a/roles/deploy_osh/templates/ceph-mon.yaml.j2
+++ b/roles/deploy_osh/templates/ceph-mon.yaml.j2
@@ -49,6 +49,31 @@ conf:
       bluestore_block_wal_size: "{{bluestore_block_wal_size}}"
       mon osd full ratio: "{{mon_osd_full_ratio}}"
       mon osd nearfull ratio: "{{mon_osd_nearfull_ratio}}"
+      objecter_inflight_op_bytes: "1073741824"
+      objecter_inflight_ops: 10240
+      debug_ms: "0/0"
+    osd:
+      osd_mkfs_type: xfs
+      osd_mkfs_options_xfs: -f -i size=2048
+      osd_max_object_name_len: 256
+      ms_bind_port_min: 6800
+      ms_bind_port_max: 7100
+      osd_snap_trim_priority: 1
+      osd_snap_trim_sleep: 0.1
+      osd_pg_max_concurrent_snap_trims: 1
+      filestore_merge_threshold: -10
+      filestore_split_multiple: 12
+      osd_scrub_begin_hour: 22
+      osd_scrub_end_hour: 4
+      osd_scrub_during_recovery: false
+      osd_scrub_sleep: 0.1
+      osd_scrub_chunk_min: 1
+      osd_scrub_chunk_max: 4
+      osd_deep_scrub_stride: "1048576"
+      osd_scrub_priority: 1
+      osd_recovery_op_priority: 1
+      osd_recovery_max_active: 1
+      osd_mount_options_xfs: "rw,noatime,largeio,inode64,swalloc,logbufs=8,logbsize=256k,allocsize=4M"
   rgw_ks:
     enabled: true
   pool:
@@ -59,25 +84,39 @@ conf:
       pg_per_osd: {{pg_per_osd}}
     spec:
       # RBD pool
-      - name: cloud.infra 
+      - name: {{infra.pool_name}}
         application: rbd
         replication: {{replication}}
-        percent_total_data: 10
+        percent_total_data: {{infra_pool_percent}}
       # Cinder pools
 {% if join_areas.enabled %}
 {% for area in join_areas.areas %}
-      - name: cloud.cinder.{{area.name}}
-        application: rbd
+      - name: {{cinder.pool_name}}.{{area.name}}
+        application: cinder-volume
         replication: {{replication}}
-        percent_total_data: {{area.osd_percent}}
+        percent_total_data: {{area.cinder_pool_percent}}
+        crush_rule: {{area.name}}_rule
+      - name: {{cinder.backup_pool_name}}.{{area.name}}
+        application: cinder-backup
+        replication: {{replication}}
+        percent_total_data: {{area.cinder_backup_pool_percent}}
         crush_rule: {{area.name}}_rule
 {% endfor %}
 {% else %}
-      - name: cloud.cinder 
-        application: rbd
+      - name: {{cinder.pool_name}}
+        application: cinder-volume
         replication: {{replication}}
-        percent_total_data: 70
+        percent_total_data: 60
+      - name: {{cinder.backup_pool_name}}
+        application: cinder-backup
+        replication: {{replication}}
+        percent_total_data: 10
 {% endif %}
+      # Glance pool
+      - name: {{glance.pool_name}}
+        application: glance-image
+        replication: {{replication}}
+        percent_total_data: {{glance_pool_percent}}
       # RadosGW pools
       - name: .rgw.root
         application: rgw
@@ -138,7 +177,7 @@ conf:
       - name: default.rgw.buckets.data
         application: rgw
         replication: {{replication}}
-        percent_total_data: 15.7
+        percent_total_data: {{rgw_pool_percent}}
 
   storage:
     mon:
