--- a/roles/deploy_osh/templates/ceph-openstack-config.yaml.j2
+++ b/roles/deploy_osh/templates/ceph-openstack-config.yaml.j2
@@ -15,5 +15,10 @@ deployment:
 bootstrap:
   enabled: false
 conf:
+  ceph:
+    global:
+      objecter_inflight_op_bytes: "1073741824"
+      objecter_inflight_ops: 10240
+      debug_ms: "0/0"
   rgw_ks:
     enabled: true
