--- a/roles/deploy_osh/templates/cinder.yaml.j2
+++ b/roles/deploy_osh/templates/cinder.yaml.j2
@@ -32,11 +32,13 @@ conf:
       enabled_backends: "{{backends | map(attribute='name') | join(',')}}"
       os_region_name: {{region}}
       backup_ceph_pool: {{cinder.backup_pool_name}}
-      backup_ceph_chunk_size: 134217728
+      backup_ceph_chunk_size: "134217728"
       backup_ceph_stripe_unit: 0
       backup_ceph_stripe_count: 0
       restore_discard_excess_bytes: "true"
-      osapi_volume_workers: 4
+      osapi_volume_workers: {{cinder.workers.osapi_volume}}
+      scheduler_default_filters: "AvailabilityZoneFilter,CapacityFilter,CapabilitiesFilter"
+      storage_availability_zone: dev
     database:
       db_max_retries: -1
       
