Add ability use cinder AZ

--- a/roles/deploy_osh/templates/ceph-mon.yaml.j2
+++ b/roles/deploy_osh/templates/ceph-mon.yaml.j2
@@ -96,17 +96,22 @@ conf:
         replication: {{replication}}
         percent_total_data: {{area.cinder_pool_percent}}
         crush_rule: {{area.name}}_rule
+      - name: {{cinder.backup_pool_name}}.{{area.name}}
+        application: cinder-backup
+        replication: {{replication}}
+        percent_total_data: {{cinder_backup_pool_percent}}
+        crush_rule: {{area.name}}_rule
 {% endfor %}
 {% else %}
       - name: {{cinder.pool_name}}
         application: cinder-volume
         replication: {{replication}}
         percent_total_data: {{cinder_pool_percent}}
-{% endif %}
       - name: {{cinder.backup_pool_name}}
         application: cinder-backup
         replication: {{replication}}
         percent_total_data: {{cinder_backup_pool_percent}}
+{% endif %}
       # Glance pool
       - name: {{glance.pool_name}}
         application: glance-image
@@ -221,4 +226,8 @@ endpoints:
       mgr:
         default: 7001
 group_by_class: 
-  {{ join_areas| to_nice_yaml| indent(2)}}
+  enabled: {{join_areas.enabled}}
+  areas:
+{% for area in join_areas.areas %}
+  - name: {{area.name}}
+{% endfor %}
