Fix ImageNotAuthorized: Not authorized for image

--- a/roles/deploy_osh/templates/glance.yaml.j2
+++ b/roles/deploy_osh/templates/glance.yaml.j2
@@ -21,7 +21,7 @@ conf:
   glance:
     DEFAULT:
       workers: {{glance.workers.api}}
-      show_image_direct_url: "True"
+      show_multiple_locations: "True"
     glance_store:
       default_store: rbd
       rbd_store_chunk_size: 8
